basic design added

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,30 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Montserrat", sans-serif;
+html {
+  box-sizing: border-box;
+}
+
+*, ::after, ::before {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  color: hsl(0, 2%, 9%);
+  text-align: center;
+  background-color: hsl(58deg 2% 39%);
+  background-image: url(./background.jpg);
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: overlay;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+
 }
