--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -52,6 +52,10 @@
   margin: 0 20px 20px 20px;
 }
 
+.form__radioButton {
+  cursor: pointer;
+}
+
 .form__button {
   border: solid 2px rgb(31 116 213);
   color: rgb(31 116 213);
