--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
-
+  min-height: 100vh;
 }
