--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,20 @@
 .footer__link:hover {
   border-bottom: 1px solid rgba(31, 116, 213, 0.452);
 }
+
+.spinner {
+  display: block;
+  margin: 20px auto;
+  width: 50px;
+  height: 50px;
+  border: 8px solid #ddd;
+  border-left-color: rgb(31 116 213);
+  border-radius: 50%;
+  animation: LoadingSpinner 1.2s linear infinite;
+}
+
+@keyframes LoadingSpinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
